# fairgnn-wod-reproduction

./: .gitignore  LICENSE  README.md  pyproject.toml
checkpoints/: README.md  download_checkpoints.sh
data/: README.md  download_datasets.sh
notebooks/: data_manipulation.ipynb
src/: main.py  paths.py
src/dataset/: dataset.py
src/models/fairgnn_wod/: AdaptiveAssignner.py  DemographicDiscriminator.py  DisentangledGraphConvEncoder.py  FairGNNWOD.py
src/models/fairkd/: FairKD.py  README.md
src/models/gcn/: GCN.py  README.md  __init__.py
src/models/vgae/: DemographicVGAE.py  HGREstimator.py
src/training/: README.md  train_fairkd.py  train_gcn.py  train_stage1.py  train_stage2.py
src/utils/: EarlyStoppingCriterion.py  LossScheduler.py  __init__.py  losses.py  metrics.py  utils.py
